use ast node replace mechanism for class closure generator